--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,14 +5,11 @@ ARG DB_USER_NAME
 ARG DB_USER_PASSWORD
 ARG DB_ROOT_PASSWORD
 
-RUN apt-get update -y
-RUN apt-get upgrade -y
-
-RUN apt-get install -y dumb-init
-
-RUN apt-get install -y mariadb-server
-
-RUN apt-get clean -y
+RUN apt-get update -y \
+	&&  apt-get upgrade -y \
+	&& apt-get install -y dumb-init \
+	&& apt-get install -y mariadb-server \
+	&& apt-get clean -y
 
 # You notice we call mysql and not mariadb. This is because MariaDB
 # is a fork of MySQL, even though they are different the name of the
