--- a/srcs/.env
+++ b/srcs/.env
@@ -4,6 +4,9 @@ DB_DATABASE=wordpress_db
 DB_HOST=mariadb:3306
 DB_USER_NAME=rmattheo
 DB_USER_PASSWORD=rmattheo
+DB_USER_NAME_NO_PRIVILEGE=geu
+DB_USER_PASSWORD_NO_PRIVILEGE=geu
+DB_USER_PASSWORD=rmattheo
 DB_ROOT_PASSWORD=root
 
 WP_SITE_TITLE="bienvue voici l'acceuil"
