--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -39,6 +39,8 @@ services:
         DB_DATABASE: ${DB_DATABASE}
         DB_USER_NAME: ${DB_USER_NAME}
         DB_USER_PASSWORD: ${DB_USER_PASSWORD}
+        DB_USER_NAME_NO_PRIVILEGE: ${DB_USER_NAME_NO_PRIVILEGE}
+        DB_USER_PASSWORD_NO_PRIVILEGE: ${DB_USER_PASSWORD_NO_PRIVILEGE}
         DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     image: mariadb
     container_name: mariadb
