--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,11 +5,14 @@ ARG DB_USER_NAME
 ARG DB_USER_PASSWORD
 ARG DB_ROOT_PASSWORD
 
-RUN apt-get update -y \
-	&&  apt-get upgrade -y \
-	&& apt-get install -y dumb-init \
-	&& apt-get install -y mariadb-server \
-	&& apt-get clean -y
+RUN apt-get update -y
+RUN apt-get upgrade -y
+
+RUN apt-get install -y dumb-init
+
+RUN apt-get install -y mariadb-server
+
+RUN apt-get clean -y
 
 # You notice we call mysql and not mariadb. This is because MariaDB
 # is a fork of MySQL, even though they are different the name of the
@@ -24,8 +27,6 @@ RUN service mysql start \
 	ALTER USER 'root'@'localhost' IDENTIFIED BY '$DB_ROOT_PASSWORD'; \
 	GRANT ALL PRIVILEGES ON $DB_DATABASE.* TO '$DB_USER_NAME'@'%' IDENTIFIED BY '$DB_USER_PASSWORD'; \
 	FLUSH PRIVILEGES;"
-	&& mysql -u root -e \
-	"CREATE USER '$DB_USER_NAME_NO_PRIVILEGE'@'%' IDENTIFIED BY '$DB_USER_PASSWORD_NO_PRIVILEGE';"
 
 COPY ./conf/mariadb.conf /etc/mysql/mariadb.conf.d/50-server.cnf
 
